...

@ThemePreviews
@Composable
internal fun ThemedRichTextPreview() {
  val text =
    """
    <h3 id="heading">Heading</h3>

    <p>This is a paragraph body</p>

    <pre><code>This is a code block</code></pre>

    <p>This is an <code>inline code block</code></p>
...
